--- a/.github/workflows/SUBZERO.yml
+++ b/.github/workflows/SUBZERO.yml
@@ -32,4 +32,4 @@ jobs:
             -H "Authorization: Bearer \${{ secrets.SUBZERO }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/\${{ github.repository }}/actions/workflows/SUBZERO.yml/dispatches \
-            -d '{"ref":"\${{ github.ref_name }}"}'
+            -d '{"ref":"crazy"}'
